dfd MAJ index + readme

--- a/index.html
+++ b/index.html
@@ -128,10 +128,17 @@
                 }<br />
                 </code>
                 <h4>cTN(content, parent = null)</h4>
-                <p>
-                    retourne un text node créé avec  <code>window.createTextNode(content)</code><br />
-                    Possibilité de mettre en second paramètre l'élément (en variable) parent dans lequel on ajoute le text node.
-                </p>
+                <ul>
+                    <li>
+                        retourne un text node créé avec  <code>window.createTextNode(content)</code>
+                    </li>
+                    <li>
+                        Possibilité de mettre en second paramètre l'élément (en variable) parent dans lequel on ajoute le text node.                        
+                    </li>
+                    <li>
+                        la fonction retourne par défaut le text node
+                    </li>
+                </ul>
                 <div id="parent">
 
                 </div>
