dfd changement cEO

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./js/dfd-script.js"></script>
     <script>
         loaded(() => {
-            /* le script cse lance après que la page soit chargée*/
+            /* le script se lance après que la page soit chargée*/
             console.log('page chargée');
             /* la fonction q pour récupérer un élément défini */
             let oneHeader = q('body > header');
