ajout de erase_childs

--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
                 <div id="parent">
 
                 </div>
+                <h4>erase_childs(node)</h4>
+                <ul>
+                    <li>
+                        supprime (remove) tous les noeuds enfant de node
+                    </li>
+                </ul>
             </article>
         </section>
     </main>
