finalisation de randomize, création de getJson et mise à jour du readme

--- a/index.html
+++ b/index.html
@@ -180,6 +180,13 @@
                 <p>
                     <span id="resRandomize"></span>
                 </p>
+                <h4>getJson</h4>
+                <p>
+                    Permet d'aller chercher une ressource json et d'envoyer les données parsée en json dans une fonction de callback de traitement du json
+                </p>
+                <div id="myJson">
+                    
+                </div>
             </article>
         </section>
     </main>
